adminportal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  admin-portal
  labels:
    app:  admin-portal
spec:
  selector:
    matchLabels:
      app: admin-portal
  replicas: 1
  template:
    metadata:
      labels:
        app:  admin-portal
    spec:
      containers:
      - name:  admin-portal
        image:  asia.gcr.io/digisense-293411/adminportal
        ports:
        - containerPort:  80
      restartPolicy: Always
