adminportal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-portal-svc
spec:
  selector:
    app: admin-portal
  type: NodePort
  ports:
  - port: 8001 
    targetPort: 80 
    protocol: TCP
