app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myhns-microservices
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: myhns-portal-svc
            servicePort: 8001
